level_omega/css/dev.css
/* ... */
#block-any_vote-company_recommendation .score .content {
  width: 140px;
  padding: 5px 5px 10px 5px;
}

#block-any_vote-company_recommendation.block_has_no_votes .widget {
  margin-top: 20px;
}

/* Company page .view-ch-company-appointments */

.officer-name-and-age {
  overflow: auto;
}

.officer-address {
  clear: both;
}

.profile_name {
  display: block;
  float: left;
  leine-height: 16px;
  margin-right: 10px;
}

/* Director search page .view-director-search */
.view-director-search h3 {
  overflow: auto;
}
.view-director-search .views-row {
  clear: both;
}

.view-director-search a.claim_profile {
  margin-top: 3px;
}

/* claim profile links */

a.claim_profile {
  display: block;
  float: left;
  width: 78px;
  height: 16px;
  text-align: center;
  background: transparent url(../images/claim_profile_buttons.png) 50% 0 no-repeat;
  color: #fff;
  font-size: 11px;
  line-height: 16px;
  font-weight: normal;
  cursor: pointer;
}
a.claim_profile:hover {
  background: transparent url(../images/claim_profile_buttons.png) 50% 100% no-repeat;
}

a.claimed {
  background: transparent url(../images/claim_profile_buttons.png) 50% 100% no-repeat;
  cursor: text;
}

/* tooltip */
span.tooltip {
  display: block;
  font-size: 13px;
  line-height: 1.25em;
  padding: 10px;
}

span.tooltip a {
  text-decoration: underline;
}
span.tooltip a:hover {
  color: #fe0;
  text-decoration: node;
}

/* dialog */
.ui-dialog-overlay {
  background: transparent url(../images/black-50-opacity.png) 0 0 repeat;
}

/* body.section-doc */
.block-level_claim_profile {
  margin: 10px -10px;
}

body.section-doc .ui-dialog-content .dialog-links-wrapper {
  width: 550px;
  margin: 0 55px;
}

body.section-doc .ui-dialog-content {
  width: 660px !important;
}

body.section-doc .ui-dialog-content p.register-intro {
  background: transparent url(../images/shadow-550.gif) 50% 0 no-repeat;
  padding: 20px 110px 10px 110px;
  margin-top: 20px;
}

body.section-doc .dialog-links a {
  margin: 5px 110px;
}

body.section-doc .claim-steps {
  color: #21A0E1;
  margin-bottom: 20px;
  padding-bottom: 40px;
  background: transparent url(../images/shadow-550.gif) 50% 100% no-repeat;
}

body.section-doc .claim-steps li {
  width: 160px;
  margin-right: 5px;
  float: left;
  position: relative;
}

body.section-doc .claim-steps li h3,
body.section-doc .claim-steps li p {
  margin-left: 50px;
}

body.section-doc .claim-steps li h3 {
  font-size: 20px;
  font-weight: bold;
}

body.section-doc .claim-steps li p {
  font-size: 12px;
}

body.section-doc .claim-steps .number {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  float: left;
  width: 38px;
  padding-left: 18px;
  height: 56px;
  font-size: 25px;
  line-height: 38px;
  font-weight: bold;
  text-align: left;
  color: #fff;
  background: transparent url(../images/bg-step-number.png) 0 0 no-repeat;
}

